# openai_client

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
src/: client.rs  client_api.rs  lib.rs  request_client.rs  reqwest_client.rs  types.rs
src/requests/: completion.rs  edits.rs  mod.rs
test_data/: completion_response.json  create_image_response.json  edit_response.json  model_response.json
