[package]
name = "openai_client"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.37"
reqwest = {version = "0.11.13", features = [ "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = {version = "1.22.0", features = [ "macros" ] }
derive_builder = "0.12.0"
async-trait = "0.1.59"

[dev-dependencies]
dotenv = "0.15.0"
wiremock = "0.5.15"
